--- a/index.html
+++ b/index.html
@@ -31,37 +31,101 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="angular-materialpreloader" class="anchor" href="#angular-materialpreloader" aria-hidden="true"><span class="octicon octicon-link"></span></a>angular-materialPreloader</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>An <code>Material Design Preloader</code> directive for angular(without using jquery) that recreates the Material pre-loader (as seen on inbox).  </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>demo is at <code>http://waseembepari.github.io/angular-material-preloader</code></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h1>
+<a id="how-to-use-angular-materialpreloader" class="anchor" href="#how-to-use-angular-materialpreloader" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use angular-materialPreloader?</h1>
+
+<p>Add the Following code to the &lt;head&gt; of your document.</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">link</span> <span class="pl-e">href</span>=<span class="pl-s1"><span class="pl-pds">"</span>css/materialPreloader.min.css<span class="pl-pds">"</span></span> <span class="pl-e">rel</span>=<span class="pl-s1"><span class="pl-pds">"</span>stylesheet prefetch<span class="pl-pds">"</span></span>&gt;
+&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s1"><span class="pl-pds">"</span>text/javascript<span class="pl-pds">"</span></span> <span class="pl-e">src</span>=<span class="pl-s1"><span class="pl-pds">"</span>js/angular-Material-Preloader.min.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
+
+<p>Place the <code>template folder</code> in your root directory</p>
+
+<p>Add <code>angularMaterialPreloader</code> dependency to your module</p>
+
+<div class="highlight highlight-javascript"><pre><span class="pl-s">var</span> myApp <span class="pl-k">=</span> angular.module(<span class="pl-s1"><span class="pl-pds">"</span>app<span class="pl-pds">"</span></span>, [<span class="pl-s1"><span class="pl-pds">"</span>angularMaterialPreloader<span class="pl-pds">"</span></span>])</pre></div>
+
+<p>Include <code>&lt;div material-preloader &gt;&lt;/div&gt;</code> directive in your html template.</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">div</span> <span class="pl-e">material-preloader</span> <span class="pl-e">position</span>=<span class="pl-s1"><span class="pl-pds">"</span>top<span class="pl-pds">"</span></span> <span class="pl-e">height</span>=<span class="pl-s1"><span class="pl-pds">"</span>5px<span class="pl-pds">"</span></span> <span class="pl-e">col1</span>=<span class="pl-s1"><span class="pl-pds">'</span>#159756<span class="pl-pds">'</span></span> <span class="pl-e">col2</span>=<span class="pl-s1"><span class="pl-pds">'</span>#da4733<span class="pl-pds">'</span></span> <span class="pl-e">col3</span>=<span class="pl-s1"><span class="pl-pds">'</span>#3b78e7<span class="pl-pds">'</span></span> <span class="pl-e">col4</span>=<span class="pl-s1"><span class="pl-pds">'</span>#fdba2c<span class="pl-pds">'</span></span> &gt;&lt;/<span class="pl-ent">div</span>&gt;
+// material-preloader as attribute</pre></div>
+
+<p>Or Include <code>&lt;material-preloader &gt;&lt;/material-preloader&gt;</code> directive as element in your html template.</p>
+
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">material</span><span class="pl-e">-preloader</span> <span class="pl-e">position</span>=<span class="pl-s1"><span class="pl-pds">"</span>top<span class="pl-pds">"</span></span> <span class="pl-e">height</span>=<span class="pl-s1"><span class="pl-pds">"</span>5px<span class="pl-pds">"</span></span> <span class="pl-e">col1</span>=<span class="pl-s1"><span class="pl-pds">'</span>#159756<span class="pl-pds">'</span></span> <span class="pl-e">col2</span>=<span class="pl-s1"><span class="pl-pds">'</span>#da4733<span class="pl-pds">'</span></span> <span class="pl-e">col3</span>=<span class="pl-s1"><span class="pl-pds">'</span>#3b78e7<span class="pl-pds">'</span></span> <span class="pl-e">col4</span>=<span class="pl-s1"><span class="pl-pds">'</span>#fdba2c<span class="pl-pds">'</span></span> &gt;&lt;/<span class="pl-ent">material</span><span class="pl-e">-preloader</span>&gt;
+// material-preloader as element</pre></div>
+
+<h4>
+<a id="variable" class="anchor" href="#variable" aria-hidden="true"><span class="octicon octicon-link"></span></a>VARIABLE</h4>
+
+<div class="highlight highlight-javascript"><pre>$scope.materialPreloader <span class="pl-k">=</span> TRUE/FALSE;
+<span class="pl-c">// Use true or false to on/off the materialpreloader.</span></pre></div>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="materialpreloader-options" class="anchor" href="#materialpreloader-options" aria-hidden="true"><span class="octicon octicon-link"></span></a>materialPreloader Options</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<table>
+<thead>
+<tr>
+<th>attribute</th>
+<th>Required</th>
+<th>Description</th>
+<th>Options</th>
+<th>Default</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>position</td>
+<td>No</td>
+<td>Position to place the preloader</td>
+<td>top/bottom</td>
+<td>top</td>
+</tr>
+<tr>
+<td>height</td>
+<td>No</td>
+<td>The height of the preloader bar</td>
+<td>any length</td>
+<td>5px</td>
+</tr>
+<tr>
+<td>col1</td>
+<td>No</td>
+<td>Color 1 option</td>
+<td>any color</td>
+<td>#159756</td>
+</tr>
+<tr>
+<td>col2</td>
+<td>No</td>
+<td>Color 2 option</td>
+<td>any color</td>
+<td>#da4733</td>
+</tr>
+<tr>
+<td>col3</td>
+<td>No</td>
+<td>Color 3 option</td>
+<td>any color</td>
+<td>#3b78e7</td>
+</tr>
+<tr>
+<td>col4</td>
+<td>No</td>
+<td>Color 4 option</td>
+<td>any color</td>
+<td>#fdba2c</td>
+</tr>
+</tbody>
+</table>
       </section>
     </div>
 
